// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grouping contains link pointing to course url 1`] = `
<ol>
  <li>
    <div />
    <a
      href="example.com"
      style={
        Object {
          "backgroundImage": "url()",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "#5678",
            "opacity": 1,
          }
        }
      />
      <span
        style={
          Object {
            "color": "#5678",
          }
        }
      >
        To Do
      </span>
    </a>
    <ol
      style={
        Object {
          "borderColor": "#5678",
        }
      }
    >
      <PlannerItem
        badges={Array []}
        color="#5678"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        title="San Juan"
        toggleCompletion={[Function]}
      />
      <PlannerItem
        badges={Array []}
        color="#5678"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
      />
    </ol>
  </li>
</ol>
`;

exports[`renders a CompletedItemsFacade when completed items are present by default 1`] = `
<ol>
  <li>
    <div />
    <a
      href="#"
      style={
        Object {
          "backgroundImage": "url()",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "#5678",
            "opacity": 1,
          }
        }
      />
      <span
        style={
          Object {
            "color": "#5678",
          }
        }
      >
        To Do
      </span>
    </a>
    <ol
      style={
        Object {
          "borderColor": "#5678",
        }
      }
    >
      <PlannerItem
        badges={Array []}
        color="#5678"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
      />
      <CompletedItemsFacade
        badges={Array []}
        itemCount={1}
        onClick={[Function]}
      />
    </ol>
  </li>
</ol>
`;

exports[`renders the base component with required props 1`] = `
<ol>
  <li>
    <div />
    <a
      href="#"
      style={
        Object {
          "backgroundImage": "url()",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "#5678",
            "opacity": 1,
          }
        }
      />
      <span
        style={
          Object {
            "color": "#5678",
          }
        }
      >
        To Do
      </span>
    </a>
    <ol
      style={
        Object {
          "borderColor": "#5678",
        }
      }
    >
      <PlannerItem
        badges={Array []}
        color="#5678"
        date={"2017-04-25T13:06:07.000Z"}
        id="5"
        title="San Juan"
        toggleCompletion={[Function]}
      />
      <PlannerItem
        badges={Array []}
        color="#5678"
        date={"2017-04-25T13:06:07.000Z"}
        id="6"
        title="Roll for the Galaxy"
        toggleCompletion={[Function]}
      />
    </ol>
  </li>
</ol>
`;
